editor: z-index fix

--- a/Resources/public/css/editor.css
+++ b/Resources/public/css/editor.css
@@ -158,7 +158,7 @@ body.modal-open {
 }
 
 .toolkit .eight-block-decorator:hover {
-    z-index: 10;
+    z-index: 100;
 }
 
 .toolkit .block-wrapper:hover > .btn-remove-block,
@@ -233,7 +233,7 @@ body.modal-open {
     width: 1px;
     position: absolute;
     background: #3791d6;
-    z-index: 10;
+    z-index: 100;
     display: none;
 }
 
@@ -242,14 +242,14 @@ body.modal-open {
     background: #3791d6;
     position: absolute;
     display: none;
-    z-index: 10;
+    z-index: 100;
 }
 
 .eight-frame-title {
     height: 26px;
     position: absolute;
     background: #c9e7ff;
-    z-index: 10;
+    z-index: 100;
     text-align: center;
     /*text-transform: uppercase;*/
     line-height: 30px;
